fix(frontend): remove spacing around summary keys

--- a/packages/frontend/components/summary/styles.css
+++ b/packages/frontend/components/summary/styles.css
@@ -14,7 +14,6 @@
   flex-grow: 1;
   font: var(--font-label);
   overflow-wrap: anywhere;
-  padding-block-start: var(--space-2xs);
 }
 
 .summary__value {
